Completed projects ui.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "zerocoding-org",
   "version": "19.8.26",
-  "description": "BUIDL the UNSTOPPABLE Web",
+  "description": "BUIDL UNSTOPPABLE!™",
   "author": "Decentralization Authority",
   "homepage": "https://zerocoding.org",
   "license": "MIT",
